--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "cSpell.words": [
+        "Aspirevac",
+        "cureo",
+        "Gunesol",
+        "Hepsi",
         "kemiger",
-        "Kemiger"
+        "Kemiger",
+        "Ürünlerimiz"
     ]
 }
